# PathOfBuilding-PoE2

./: .gitignore  .luacheckrc  .luacov  .luarc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  changelog.txt  changelog.txt.rej  docker-compose.yml  help.txt  manifest.xml  pob-mcp-tick-debug.txt  update_manifest.py
.github/: tweak_changelogs.sh
.github/ISSUE_TEMPLATE/: ai_fix.yaml
.github/workflows/: ai-fix.yml  ai-review.yml  auto-merge.yml  backport.yml  backport_receive.yml  ci.yml  macos-release.yml  macos.yml  manifest.yml  release-check.yml  release.yml  spellcheck.yml  sync-release-to-master.yml  sync-upstream.yml  test.yml
macos/: CMakeLists.txt  PathOfBuilding-PoE2.entitlements
macos/src/: Host.mm
pob-mcp/: README.md  gui_bridge.lua
pob-mcp/engine/: bridge.lua
pob-mcp/server/: buildcode.py  engine_client.py  server.py  smoke_test.py
runtime-macos/: .gitignore  Assets  Classes  Export  Launch.lua  Modules  README.md  TreeData  launcher.c  liblua-utf8.dylib  liblzip.dylib  libsocket.dylib  lua  pob2
runtime/lua/: nvtt.lua  socket.lua  xml.lua.rej
scripts/: agent-lib.sh
spec/Fixtures/: issue1754_block_ehp.xml
spec/Modules/: TestTradeQueryCurrency_spec.lua  TestTradeQueryRequests_spec.lua
spec/System/: PassiveProgression_spec.lua  TestAilments_spec.lua  TestAilments_spec.lua.rej  TestAttacks_spec.lua  TestBaryanicLeylines_spec.lua  TestCalcBreakdown_spec.lua  TestChargeConsumption_spec.lua  TestChineseItemParse_spec.lua  TestCompanionFullDPS_spec.lua  TestCompareBuySimilar_spec.lua  TestConfigTab_spec.lua  TestDebuffs_spec.lua  TestDefence_spec.lua  TestDefence_spec.lua.rej  TestFacebreaker_spec.lua  TestFullDPSCache_spec.lua  TestIdolatry_spec.lua  TestImportReimport_spec.lua  TestImportTab_spec.lua  TestInfernalLegion_spec.lua  TestItemMods_spec.lua  TestItemMods_spec.lua.rej  TestItemParse_spec.lua  TestItemTools_spec.lua  TestItemsTab_spec.lua  TestLoadouts_spec.lua  TestPassiveSpec_spec.lua  TestPoEAPIAuth_spec.lua  TestRadiusJewels_spec.lua  TestSkillsTab_spec.lua  TestSkills_spec.lua  TestSkills_spec.lua.rej  TestSocketables_spec.lua  TestStatDescriber_spec.lua  TestStonefist_spec.lua  TestTamedBeastMods_spec.lua  TestTotems_spec.lua  TestTradeHelpers_spec.lua  TestTradeQueryCurrency_spec.lua  TestTradeQueryGenerator_spec.lua  (+7 more)
src/: GameVersions.lua  HeadlessWrapper.lua  HeadlessWrapper.lua.rej  Launch.lua  LaunchServer.lua  UpdateCheck.lua  pob-mcp-debug.txt
src/AI/: AIClient.lua  BuildSnapshot.lua  ProviderPresets.lua  Settings.lua
tools/: items.txt
(+628 files in other folders)
